# evidense

./: README.md
c/: CMakeLists.txt  Readme.md
c/src/: README.md  channel.c  channel.h  cmdbaseline.c  cmdbaseline.h  cmddata.c  cmddata.h  cmdempty.c  cmdempty.h  cmdexport.c  cmdexport.h  cmdmeasure.c  cmdmeasure.h  cmdrun.c  cmdrun.h  cmdsave.c  cmdsave.h  cmdselftest.c  cmdselftest.h  dict.h  evi_unix.c  evi_win.c  evibase.c  evibase.h  eviconfig.h  evidense.c  evidense.h  evidenseerror.h  evidenseindex.h  json.c  json.h  main.c  measurement.c  measurement.h  quadruple.c  quadruple.h  singlemeasurement.c  singlemeasurement.h
csharp/: README.md  eviDense.sln
csharp/EviDense/: EviDense.csproj  README.md  channel.cs  constants.cs  device.cs  devicefinder.cs  measurement.cs  quadruple.cs  run.cs  singlemeasurement.cs  storage.cs
csharp/EviDenseDemo/: EviDenseDemo.csproj  Program.cs
csharp/EviDenseOD/: EviDenseOD.csproj  EviDenseOD.sln  Program.cs  Readme.md
csharp/doc/: index.html  index.json  manifest.json  toc.html  toc.json  xrefmap.yml
csharp/doc/api/: DeviceTests.TestDevice.html  DeviceTests.html  Hse.EviDense.AdcResult.html  Hse.EviDense.Amplifier.html  Hse.EviDense.AmplifierFactors.html  Hse.EviDense.Channel.html  Hse.EviDense.Device.Rebooting.html  Hse.EviDense.Device.UpdateProgress.html  Hse.EviDense.Device.html  Hse.EviDense.DeviceFinder.html  Hse.EviDense.Dict.html  Hse.EviDense.Error.html  Hse.EviDense.Factors.html  Hse.EviDense.Index.html  Hse.EviDense.Led.html  Hse.EviDense.LevellingChannelResult.html  Hse.EviDense.LevellingResult.html  Hse.EviDense.Measurement.html  Hse.EviDense.Quadruple.html  Hse.EviDense.Results.html  Hse.EviDense.Run.html  Hse.EviDense.SelfTestResult.html  Hse.EviDense.Selftest.html  Hse.EviDense.SingleMeasurement.html  Hse.EviDense.StatusLedColor.html  Hse.EviDense.StorageMeasurement.html  Hse.EviDense.StorageMeasurementEntry.html  Hse.EviDense.TypeOf.html  Hse.EviDense.USB.html  Hse.EviDense.html  toc.html  toc.json
csharp/doc/docs/: getting-started.html  introduction.html
